# Biorob-master-semester-project-Roombot

./: Plugin_main.cs  README.md
approach 1/: Compute_key_position_approach1.ipynb
approach 1/roombot_description/: CMakeLists.txt  README.md  package.xml
approach 1/roombot_description/convex/roombot/: HS1-ch.txt  HS2-ch.txt  HS3-ch.txt  HS4-ch.txt
approach 1/roombot_description/convex/roombot/scaled/: HS1-ch.txt  HS2-ch.txt  HS3-ch.txt  HS4-ch.txt
approach 1/roombot_description/launch/: display.launch  display.rviz
approach 1/roombot_description/meshes/: HS2.stl  HS3.stl  compute_inertia_tag.py  latch.stl  shape4inertia.stl
approach 1/roombot_description/meshes/scaled/: HS2.stl  HS3.stl
approach 1/roombot_description/rsdf/roombot/: surfaces.rsdf
approach 1/roombot_description/urdf/: roombot.urdf
approach 2/: data analysis approach 2.ipynb
